--- a/html/cursos/Aprende Javascript ES9, HTML, CSS3 y NodeJS desde cero/grid2.html
+++ b/html/cursos/Aprende Javascript ES9, HTML, CSS3 y NodeJS desde cero/grid2.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- begin -->
     <div class="grid">
         <div class="red">Header</div>
         <div class="red">Header</div>
